# tracim

./: .coveragerc  .dockerignore  .editorconfig  .gitattributes  .gitignore  .hgignore  .jshintrc  .pre-commit-config.yaml  .rgignore  .travis.yml  API.md  CHANGELOG.md  CHANGES.txt  CONTRIBUTING.md  LICENCE_CC_BY_SA  LICENSE  LICENSE.md  MANIFEST.in  README.md  README.md~  README.txt  README_traduction.md  README_translation.md  alembic.ini  all_cmd.md  backend_lib.sh  bash_library.sh  build_full_frontend.sh  build_full_frontend_standalone.sh  build_tracim_frontend.sh  changelog.md  color.json.sample  development.ini.old  development.ini.oloool  development.ini.sample  first_install_frontend.sh  generate_doc.sh  gulpfile.js  i18next.option.js  i18next.scanner.js  (+21 more)
backend/: .coveragerc  .env  .gitignore  .test.env  CHANGES.txt  README.md  color-test.json  conftest.py  create_test_storage_dir.sh  cypress_test.ini  development.ini.sample  docker-compose-alternative.yml  docker-compose-opt.yml  docker-compose-optional.yml  docker-compose.yml  form.json  formForTest.json  generate_data_for_test.py  generate_hookspec_sphinx_rst_doc.py  production.ini  pushpin_test.conf  pyproject.toml  pytest.ini  requirements-build.txt  requirements-db-mysql.txt  requirements-db-postgres.txt  requirements-dev.txt  requirements-devtool.txt  requirements-full-preview-generator.txt  requirements-storage-s3.txt  requirements-test.txt  requirements.txt  set_requirements.bash  settings_saml2.json  settings_saml2.json.sample  setup.cfg  setup.py  setup_dev_env.py  test_commands.ini  tests_config_user_status_connection_monitor.ini  (+4 more)
backend/daemons/: mail_fetcher.py  mail_notifier.py  user_connection_state_monitor.py
backend/doc/: apache.md  api.md  branding.md  cli.md  database.md  devtools.md  env_settings.md  hello_world_plugin.py  i18n.md  known_issues.md  live_message_setup.md  live_messages.md  migrate_from_v1.md  migrate_storage.md  migration.md  minio-encryption.md  roles.md  setting.md  user_custom_properties.md
backend/load_tests/: generate_data_for_test.py  locustfile.py  readme.md
backend/official_plugins/: README.md
backend/pushpin_config/: pushpin.conf  routes
backend/pushpin_cypress_config/: routes
backend/tracim/: config.py
backend/tracim_backend/: __init__.py  apps.py  config.py  error.py  error_code.py  (+5 more)
(+4228 files in other folders)
