[metadata]
name = tracim_backend
version = 3.7.0_rc1
author = Algoo
author-email = contact@tracim.fr
url = https://www.algoo.fr/fr/tracim
project_urls =
    Source=https://github.com/tracim/tracim
    Tracker=https://github.com/tracim/tracim/issues
description = Rest API (Back-end) of Tracim v2
long_description = file: README.md, CHANGES.txt
license = MIT
keywords = web, pyramid, tracim
classifiers =
    Development Status :: 5 - Production/Stable
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Framework :: Pyramid
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: WSGI :: Application
    Topic :: Communications :: File Sharing
    Topic :: Communications
    License :: OSI Approved :: MIT License

[extract_messages]
output_file = tracim_backend/locale/backend.pot
width = 80

[init_catalog]
domain = tracim_backend
input_file = tracim_backend/locale/backend.pot
output_dir = tracim_backend/locale

[update_catalog]
domain = tracim_backend
input_file = tracim_backend/locale/backend.pot
output_dir = tracim_backend/locale
previous = true

[isort]
multi_line_output = 3
line_length = 100
force_single_line = true
force_sort_within_sections = true
combine_as_imports = true
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
skip_glob = .eggs*,.venv
known_standard_library = contextvars,dataclasses,urllib
known_third_party = PIL,alembic,babel,bs4,caldav,cliff,colorlog,colour,dateutil,defusedxml,depot,dotenv,elasticsearch,elasticsearch_dsl,email_reply_parser,filelock,freezegun,git,gripcontrol,hapic,html2text,imapclient,importlib_metadata,jsonschema,ldap3,mako,markdown,marshmallow,mock,paste,plaster,pluggy,preview_generator,pyramid,pyramid_beaker,pyramid_ldap3,pyramid_multiauth,pytest,pytest_pyramid_server,pytz,radicale,redis,requests,responses,rq,setuptools,slugify,sqlakeyset,sqlalchemy,sseclient,testinfra,transaction,waitress,webob,webtest,wsgidav,yaml,zope
known_first_party = tracim_backend

[flake8]
max-line-length = 100
show-source = True
max-complexity = 10
ignore = C901,E501,I801,W503
exclude = .venv,.eggs,tools
doctest = True
